@@ -1,6 +1,11 @@
 2007-03-18  Inge Wallin  <inge@lysator.liu.se>
 
 	More Q3Support -> Qt4 conversions.
+	* dialogs/KCConfigAxesPage.cc (KCConfigAxesPage): Fix layout and
+	port to Qt4. This file produces no warnings now and uses no
+	q3support classes.
+
+	More Q3Support -> Qt4 conversions.
 	* dialogs/KCConfigSubtypeBarPage.cc (KCConfigSubtypeBarPage): Fix
 	layout, and port to Qt4. This file produces no warnings now and
 	uses no q3support classes.
